--- a/EC_Launcher/resources/lang.ru-RU.xaml
+++ b/EC_Launcher/resources/lang.ru-RU.xaml
@@ -9,7 +9,7 @@
     <v:String x:Key="m_Donate">Donate!</v:String>
     <v:String x:Key="m_Settings">Настройки</v:String>
     <v:String x:Key="m_GenerateHash">Сгенерировать хэш</v:String>
-    <v:String x:Key="m_FollowUsLabel">Новости:</v:String>
+    <v:String x:Key="m_FollowUsLabel">Подпишитесь на нас</v:String>
     <v:String x:Key="m_ModVersionLabel">Версия мода:</v:String>
     <v:String x:Key="m_LauncherVersionLabel">Версия лаунчера:</v:String>
     <v:String x:Key="m_Author">Автор: SuxrobGM</v:String>
