--- a/EC_Launcher/resources/lang.xaml
+++ b/EC_Launcher/resources/lang.xaml
@@ -9,7 +9,7 @@
     <v:String x:Key="m_Donate">Donate!</v:String>
     <v:String x:Key="m_Settings">Settings</v:String>
     <v:String x:Key="m_GenerateHash">Generate Hash</v:String>
-    <v:String x:Key="m_FollowUsLabel">Follow us: </v:String>
+    <v:String x:Key="m_FollowUsLabel">Follow us</v:String>
     <v:String x:Key="m_ModVersionLabel">Mod Version: </v:String>
     <v:String x:Key="m_LauncherVersionLabel">Launcher Version: </v:String>
     <v:String x:Key="m_Author">Developed by SuxrobGM</v:String>
