--- a/EC_Launcher/MainWindow.xaml
+++ b/EC_Launcher/MainWindow.xaml
@@ -9,7 +9,10 @@
         ResizeMode="NoResize"
         Title="Hearts of Iron IV: Economic Crisis Launcher" 
         Height="532" 
-        Width="800">
+        Width="800"
+        BorderBrush="#7F87CEEB"
+        BorderThickness="1">
+
 
     <WindowChrome.WindowChrome>
         <WindowChrome CaptionHeight="26" ResizeBorderThickness="5" />
@@ -27,82 +30,75 @@
         </WebBrowser>
 
         <StackPanel HorizontalAlignment="Left" Height="186" Margin="10,140,0,0" VerticalAlignment="Top" Width="176">
-            <StackPanel.Background>
-                <RadialGradientBrush>
-                    <GradientStop Color="Black"/>
-                    <GradientStop Color="#FF1B1B1B" Offset="1"/>
-                </RadialGradientBrush>
-            </StackPanel.Background>
 
             <Button 
                 x:Name="OpenGameButton"
-                Content="{DynamicResource m_OpenGame}"
-                Style="{StaticResource CustomButton}" 
+                Content="{DynamicResource m_OpenGame}"               
                 VerticalAlignment="Top" 
                 Width="176" 
                 Height="28"                 
                 Margin="0" 
-                Click="OpenGameButton_Click" HorizontalAlignment="Left"/>
+                Click="OpenGameButton_Click" 
+                HorizontalAlignment="Left" 
+                Style="{DynamicResource ButtonStyle}"/>
 
             <Button 
                 x:Name="CheckUpdateButton" 
-                Content="{DynamicResource m_CheckUpdate}" 
-                Style="{StaticResource CustomButton}" 
+                Content="{DynamicResource m_CheckUpdate}"                  
                 HorizontalAlignment="Left" 
                 VerticalAlignment="Top" 
                 Width="176" 
                 Height="28"                
                 Margin="0,3,0,0" 
-                Click="CheckUpdateButton_Click"/>
+                Click="CheckUpdateButton_Click"
+                Style="{DynamicResource ButtonStyle}"/>
 
             <Button 
                 x:Name="ReportBugButton" 
-                Content="{DynamicResource m_ReportBug}" 
-                Style="{StaticResource CustomButton}"
+                Content="{DynamicResource m_ReportBug}"               
                 HorizontalAlignment="Left" 
                 VerticalAlignment="Top" 
                 Width="176" 
                 Height="27"               
                 Margin="0,3,0,0" 
-                Click="ReportBugButton_Click"/>
+                Click="ReportBugButton_Click"
+                Style="{DynamicResource ButtonStyle}"/>
 
             <Button 
                 x:Name="DonateButton" 
-                Content="{DynamicResource m_Donate}" 
-                Style="{StaticResource CustomButton}"
+                Content="{DynamicResource m_Donate}"               
                 HorizontalAlignment="Left" 
                 VerticalAlignment="Top" 
                 Width="176" 
                 Height="28"                
-                Margin="0,3,0,0" Click="DonateButton_Click"/>
+                Margin="0,3,0,0" Click="DonateButton_Click"
+                Style="{DynamicResource ButtonStyle}"/>
 
             <Button 
                 x:Name="SettingsButton" 
-                Content="{DynamicResource m_Settings}"
-                Style="{StaticResource CustomButton}"
+                Content="{DynamicResource m_Settings}"              
                 HorizontalAlignment="Left" 
                 VerticalAlignment="Top" 
                 Width="176" 
                 Height="28" 
                 Margin="0,3,0,0" 
-                Click="SettingsButton_Click"/>
+                Click="SettingsButton_Click"
+                Style="{DynamicResource ButtonStyle}"/>
 
             <Button 
                 x:Name="GenerateHashButton" 
-                Content="{DynamicResource m_GenerateHash}"
-                Style="{StaticResource CustomButton}"
+                Content="{DynamicResource m_GenerateHash}"               
                 HorizontalAlignment="Left" 
                 VerticalAlignment="Top" 
                 Width="176"
                 Height="27" 
                 Margin="0,3,0,0" 
-                Click="GenerateHashButton_Click"/>
+                Click="GenerateHashButton_Click"
+                Style="{DynamicResource ButtonStyle}"/>
         </StackPanel>
-
-        <ProgressBar x:Name="ProgressBar1" x:FieldModifier="public" HorizontalAlignment="Left" Height="23" Margin="10,355,0,0" VerticalAlignment="Top" Width="222" ValueChanged="ProgressBar1_ValueChanged"/>
         <TextBlock x:Name="PgBar_TextBlock" Visibility="Hidden" Text="{Binding ElementName=ProgressBar1, Path=Value, StringFormat={}{0:0}%}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="133,290,642,113" />
 
-        <Label x:Name="ModVersionLabel" Content="{DynamicResource m_ModVersionLabel}" HorizontalAlignment="Left" Margin="237,409,0,0" VerticalAlignment="Top" FontWeight="Bold" Background="{x:Null}">
+        <Label x:Name="ModVersionLabel" Content="{DynamicResource m_ModVersionLabel}" HorizontalAlignment="Left" Margin="10,491.942,0,0" VerticalAlignment="Top" FontWeight="Bold" Background="{x:Null}" FontSize="9">
             <Label.Foreground>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="0"/>
@@ -110,7 +106,7 @@
                 </LinearGradientBrush>
             </Label.Foreground>
         </Label>
-        <Label x:Name="LauncherVersionLabel" Content="{DynamicResource m_LauncherVersionLabel}" HorizontalAlignment="Left" Margin="237,383,0,0" VerticalAlignment="Top" FontWeight="Bold">
+        <Label x:Name="LauncherVersionLabel" Content="{DynamicResource m_LauncherVersionLabel}" HorizontalAlignment="Left" Margin="10,477.914,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="9">
             <Label.Foreground>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="0"/>
@@ -118,7 +114,7 @@
                 </LinearGradientBrush>
             </Label.Foreground>
         </Label>
-        <Label x:Name="DeveloperMode_Label" Content="{DynamicResource m_DevMode}" HorizontalAlignment="Left" Margin="631,485,0,0" VerticalAlignment="Top" Background="{x:Null}" Foreground="#FFF30000" FontWeight="Bold"/>
+        <Label x:Name="DeveloperMode_Label" Content="{DynamicResource m_DevMode}" HorizontalAlignment="Left" Margin="10,33.93,0,0" VerticalAlignment="Top" Background="{x:Null}" Foreground="#FFF30000" FontWeight="Bold"/>
         <Label Content="{DynamicResource m_FollowUsLabel}" HorizontalAlignment="Left" Margin="44,383,0,0" VerticalAlignment="Top" FontWeight="Bold">
             <Label.Foreground>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -231,7 +227,7 @@
         </StackPanel>
 
         <!-- Custom Top Bar -->
-        <Rectangle HorizontalAlignment="Left" Height="30" VerticalAlignment="Top" Width="800">
+        <Rectangle HorizontalAlignment="Left" Height="30" VerticalAlignment="Top" Width="800" Margin="0,-5,-2,0">
             <Rectangle.Stroke>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="0"/>
@@ -260,7 +256,7 @@
                 <ImageBrush ImageSource="icons/cancel_button.png"/>
             </Button.Background>
         </Button>
-        <Label Content="Hearts of Iron IV: Economic Crisis Launcher" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="16" FontFamily="Perpetua Titling MT">
+        <Label Content="Hearts of Iron IV: Economic Crisis Launcher" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="16" FontFamily="Perpetua Titling MT" Height="25" Width="440.913">
             <Label.Foreground>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="1"/>
@@ -271,8 +267,11 @@
                 <DropShadowEffect Color="#FF0E0E0E" RenderingBias="Quality"/>
             </Label.Effect>
         </Label>
-        <Label Content="{DynamicResource m_Author}" HorizontalAlignment="Left" Margin="10,485,0,0" VerticalAlignment="Top" Foreground="White" FontStyle="Italic"/>
-        <TextBlock Text="{Binding ElementName=ProgressBar1, Path=Value, StringFormat={}{0:0}%}" HorizontalAlignment="Left" Height="23" Margin="108,355,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="46" Background="{x:Null}" FontWeight="Bold" FontStyle="Italic"/>
-        <TextBlock x:Name="statusText" HorizontalAlignment="Left" Margin="44,334,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontStyle="Italic"/>
+        <Label Content="{DynamicResource m_Author}" HorizontalAlignment="Left" Margin="616.426,488.706,0,0" VerticalAlignment="Top" Foreground="White" FontStyle="Italic"/>
+        <Grid HorizontalAlignment="Left" Height="51.96" Margin="237,383,0,0" VerticalAlignment="Top" Width="553">
+            <TextBlock x:Name="statusText" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontStyle="Italic" Margin="0,8,0,0"/>
+            <ProgressBar x:Name="ProgressBar1" x:FieldModifier="public" HorizontalAlignment="Left" Height="23" Margin="0,28.96,0,0" VerticalAlignment="Top" Width="553" ValueChanged="ProgressBar1_ValueChanged"/>
+            <TextBlock Text="{Binding Value, ElementName=ProgressBar1, StringFormat=\{0:0\}%}" HorizontalAlignment="Left" Height="23" Margin="288,28.96,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="46" Background="{x:Null}" FontWeight="Bold" FontStyle="Italic"/>
+        </Grid>
     </Grid>
 </Window>
