--- a/EC_Launcher/resources/ButtonStyle.xaml
+++ b/EC_Launcher/resources/ButtonStyle.xaml
@@ -1,30 +1,94 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:EC_Launcher">
-    
-    <!-- Custom Styles -->
-    <LinearGradientBrush x:Key="LinearGradient" EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
-        <GradientStop Color="#FFE8E8E8" Offset="1"/>
-        <GradientStop Color="#FF7A430B" Offset="0.4"/>
-    </LinearGradientBrush>
-
-    <LinearGradientBrush x:Key="YellowLinearGradientBrush" EndPoint="0.5,1" StartPoint="0.5,0">
-        <GradientStop Color="Black" Offset="0"/>
-        <GradientStop Color="#FFFF8B00" Offset="1"/>
-    </LinearGradientBrush>
-
-    <LinearGradientBrush x:Key="BlueLinearGradientBrush" EndPoint="0.5,1" StartPoint="0.5,0">
-        <GradientStop Color="Black" Offset="0"/>
-        <GradientStop Color="#FF4F4BB0" Offset="1"/>
-    </LinearGradientBrush>
-
-    <Style x:Key="CustomButton" TargetType ="Button">
-        <Setter Property="Background" Value ="{StaticResource LinearGradient}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource YellowLinearGradientBrush}"/>
-        <Setter Property="Foreground" Value="{StaticResource BlueLinearGradientBrush}"/>
-        <Setter Property="FontFamily" Value="Stencil"/>
-        <Setter Property="FontWeight" Value="Bold"/>
-        <Setter Property="FontSize" Value="14"/>
+                    xmlns:local="clr-namespace:EC_Launcher" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions">
+    <Style x:Key="FocusVisual">
+        <Setter Property="Control.Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Rectangle Margin="2" SnapsToDevicePixels="true" Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" StrokeThickness="1" StrokeDashArray="1 2"/>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
+    <SolidColorBrush x:Key="Button.Static.Background" Color="#FFDDDDDD"/>
+    <SolidColorBrush x:Key="Button.Static.Border" Color="#FF707070"/>
+    <SolidColorBrush x:Key="Button.MouseOver.Background" Color="#FFBEE6FD"/>
+    <SolidColorBrush x:Key="Button.MouseOver.Border" Color="#FF3C7FB1"/>
+    <SolidColorBrush x:Key="Button.Pressed.Background" Color="#FFC4E5F6"/>
+    <SolidColorBrush x:Key="Button.Pressed.Border" Color="#FF2C628B"/>
+    <SolidColorBrush x:Key="Button.Disabled.Background" Color="#FFF4F4F4"/>
+    <SolidColorBrush x:Key="Button.Disabled.Border" Color="#FFADB2B5"/>
+    <SolidColorBrush x:Key="Button.Disabled.Foreground" Color="#FF838383"/>
+    <Style x:Key="ButtonStyle" TargetType="{x:Type Button}">
+        <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
+        <Setter Property="Background" Value="{DynamicResource Button.Pressed.Border}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource Button.Static.Border}"/>
+        <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="Padding" Value="1"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Grid x:Name="grid" SnapsToDevicePixels="true" Height="28" Width="176">
+                        <Grid.Effect>
+                            <DropShadowEffect Opacity="0.8"/>
+                        </Grid.Effect>
+                        <Rectangle x:Name="glassCube" Stroke="Black" RadiusY="15.828" RadiusX="15.828" Opacity="0">
+                            <Rectangle.Fill>
+                                <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+                                    <GradientStop Color="#BFDCBD7B"/>
+                                    <GradientStop Offset="1" Color="#BFA89349"/>
+                                    <GradientStop Color="#BFE8BE31" Offset="0.4"/>
+                                    <GradientStop Offset="0.2" Color="#BFD3BC8B"/>
+                                    <GradientStop Color="#BFD4AC24" Offset="0.8"/>
+                                    <GradientStop Offset="0.6" Color="#BFC1B08C"/>
+                                </LinearGradientBrush>
+                            </Rectangle.Fill>
+                        </Rectangle>
+                        <Rectangle x:Name="background" RadiusY="15.828" RadiusX="15.828" StrokeThickness="2" Stroke="#7F3C3F5B">
+                            <Rectangle.Fill>
+                                <RadialGradientBrush>
+                                    <GradientStop Color="#E50F7781" Offset="1"/>
+                                    <GradientStop Color="#E510B899"/>
+                                    <GradientStop Color="#E50F9399" Offset="0.8"/>
+                                    <GradientStop Color="#E50F9090" Offset="0.6"/>
+                                    <GradientStop Color="#E50FA5A5" Offset="0.4"/>
+                                    <GradientStop Color="#E50FACAC" Offset="0.2"/>
+                                </RadialGradientBrush>
+                            </Rectangle.Fill>
+                        </Rectangle>
+                        <ContentPresenter x:Name="contentPresenter" 
+                                          TextBlock.FontFamily="Broadway" 
+                                          TextBlock.TextAlignment="Center" 
+                                          TextBlock.FontWeight="Heavy"
+                                          TextBlock.Foreground="WhiteSmoke"
+                                          TextBlock.FontSize="14"
+                                          Focusable="False" 
+                                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" 
+                                          RecognizesAccessKey="True" 
+                                          SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" 
+                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}" 
+                                          Margin="10,6.02" 
+                                          Width="156"/>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsDefaulted" Value="true"/>
+                        <Trigger Property="IsMouseOver" Value="true">
+                            <Setter Property="Opacity" TargetName="glassCube" Value="1"/>
+                            <Setter Property="Opacity" TargetName="background" Value="0.5"/>
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="true"/>
+                        <Trigger Property="IsEnabled" Value="false">
+                            <Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="{StaticResource Button.Disabled.Foreground}"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+
 
 </ResourceDictionary>
