--- a/EC_Launcher/MainWindow.xaml
+++ b/EC_Launcher/MainWindow.xaml
@@ -246,7 +246,7 @@
             Style="{StaticResource ButtonBackgroundImageShow}"
             Content="" 
             HorizontalAlignment="Left" 
-            Margin="758,30,0,0" 
+            Margin="758,25,0,0" 
             VerticalAlignment="Top" 
             Width="32" 
             Height="32" 
@@ -256,7 +256,7 @@
                 <ImageBrush ImageSource="icons/cancel_button.png"/>
             </Button.Background>
         </Button>
-        <Label Content="Hearts of Iron IV: Economic Crisis Launcher" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="16" FontFamily="Perpetua Titling MT" Height="25" Width="440.913">
+        <Label Content="Hearts of Iron IV: Economic Crisis Launcher" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="16" FontFamily="Perpetua Titling MT" Height="25" Width="440.913" Style="{DynamicResource LabelStyle}">
             <Label.Foreground>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="1"/>
@@ -270,6 +270,7 @@
         <Label Content="{DynamicResource m_Author}" HorizontalAlignment="Left" Margin="616.426,488.706,0,0" VerticalAlignment="Top" Foreground="White" FontStyle="Italic"/>
         <Grid HorizontalAlignment="Left" Height="51.96" Margin="237,383,0,0" VerticalAlignment="Top" Width="553">
             <TextBlock x:Name="statusText" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontStyle="Italic" Margin="0,8,0,0"/>
+            <TextBlock x:Name="statusCountText" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontStyle="Italic" Margin="474,8,0,0" Height="16"/>
             <ProgressBar x:Name="ProgressBar1" x:FieldModifier="public" HorizontalAlignment="Left" Height="23" Margin="0,28.96,0,0" VerticalAlignment="Top" Width="553" ValueChanged="ProgressBar1_ValueChanged"/>
             <TextBlock Text="{Binding Value, ElementName=ProgressBar1, StringFormat=\{0:0\}%}" HorizontalAlignment="Left" Height="23" Margin="288,28.96,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="46" Background="{x:Null}" FontWeight="Bold" FontStyle="Italic"/>
         </Grid>
