--- a/EC_Launcher/resources/lang.ru-RU.xaml
+++ b/EC_Launcher/resources/lang.ru-RU.xaml
@@ -50,6 +50,7 @@
     <v:String x:Key="m_UpdatingLauncher">Скачивается обновление EC_Launcher.exe ...</v:String>
     <v:String x:Key="m_UpdatingMod">Скачивается обновление мода...</v:String>
     <v:String x:Key="m_GeneratingHash">Генерирование хеш-файла...</v:String>
+    <v:String x:Key="m_ProgressFinished">Завершено!</v:String>
 
     <!--Dialog Description-->
     <v:String x:Key="m_SetModDirDesc">Укажите правильный путь мода</v:String>
