--- a/EC_Launcher/resources/lang.xaml
+++ b/EC_Launcher/resources/lang.xaml
@@ -48,8 +48,9 @@
     
     <!--Progress Bar Status Texts-->
     <v:String x:Key="m_UpdatingLauncher">Updating EC_Launcher.exe ...</v:String>
-    <v:String x:Key="m_UpdatingMod">Updating mod...</v:String>
+    <v:String x:Key="m_UpdatingMod">Updating mod... downloading file:</v:String>
     <v:String x:Key="m_GeneratingHash">Generating hash file...</v:String>
+    <v:String x:Key="m_ProgressFinished">Completed!</v:String>
     
     <!--Dialog Description-->
     <v:String x:Key="m_SetModDirDesc">Please set the correct path of the mod</v:String>
