updated style and minor fixes

--- a/EC_Launcher/resources/ButtonBackgroundImage.xaml
+++ b/EC_Launcher/resources/ButtonBackgroundImage.xaml
@@ -16,9 +16,7 @@
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Foreground" Value="Blue" />
-                            <Setter Property="Cursor" Value="Hand" />
-                            <!-- If we don't tell the background to change on hover, it will remain the same -->
+                            <Setter Property="Opacity" Value="0.7"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
