--- a/EC_Launcher/MainWindow.xaml
+++ b/EC_Launcher/MainWindow.xaml
@@ -8,7 +8,7 @@
         WindowStyle="None"
         ResizeMode="NoResize"
         Title="Hearts of Iron IV: Economic Crisis Launcher" 
-        Height="532" 
+        Height="549" 
         Width="800"
         BorderBrush="#7F87CEEB"
         BorderThickness="1">
@@ -23,13 +23,25 @@
             <ImageBrush ImageSource="Background.bmp"/>
         </Grid.Background>
 
-        <WebBrowser 
+        <Border Name="mask" CornerRadius="20" Width="560" BorderThickness="1"
+        BorderBrush="Black" Margin="238,57,0,147">
+            <Border.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#BF000000" Offset="0"/>
+                    <GradientStop Color="#BF5B5050" Offset="0.534"/>
+                </LinearGradientBrush>
+            </Border.Background>
+
+            <WebBrowser 
             x:Name="WBrowser" 
             HorizontalAlignment="Left" 
-            Height="321" 
-            Margin="237,57,0,0" 
+            Height="323" 
+            Margin="9,9,0,0" 
             VerticalAlignment="Top" 
-            Width="553" LoadCompleted="WBrowser_LoadCompleted"/>
+            Width="540" LoadCompleted="WBrowser_LoadCompleted"/>
+
+        </Border>
+
 
         <StackPanel HorizontalAlignment="Left" Height="186" Margin="10,140,0,0" VerticalAlignment="Top" Width="176">
 
@@ -100,7 +112,7 @@
         </StackPanel>
         <TextBlock x:Name="PgBar_TextBlock" Visibility="Hidden" Text="{Binding ElementName=ProgressBar1, Path=Value, StringFormat={}{0:0}%}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="133,290,642,113" />
 
-        <Label x:Name="ModVersionLabel" Content="{DynamicResource m_ModVersionLabel}" HorizontalAlignment="Left" Margin="10,491.942,0,0" VerticalAlignment="Top" FontWeight="Bold" Background="{x:Null}" FontSize="9">
+        <Label x:Name="ModVersionLabel" Content="{DynamicResource m_ModVersionLabel}" HorizontalAlignment="Left" Margin="10,506,0,0" VerticalAlignment="Top" FontWeight="Bold" Background="{x:Null}" FontSize="9">
             <Label.Foreground>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="0"/>
@@ -108,7 +120,7 @@
                 </LinearGradientBrush>
             </Label.Foreground>
         </Label>
-        <Label x:Name="LauncherVersionLabel" Content="{DynamicResource m_LauncherVersionLabel}" HorizontalAlignment="Left" Margin="10,477.914,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="9">
+        <Label x:Name="LauncherVersionLabel" Content="{DynamicResource m_LauncherVersionLabel}" HorizontalAlignment="Left" Margin="10,493,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="9">
             <Label.Foreground>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="0"/>
@@ -116,8 +128,8 @@
                 </LinearGradientBrush>
             </Label.Foreground>
         </Label>
-        <Label x:Name="DeveloperMode_Label" Content="{DynamicResource m_DevMode}" HorizontalAlignment="Left" Margin="10,33.93,0,0" VerticalAlignment="Top" Background="{x:Null}" Foreground="#FFF30000" FontWeight="Bold"/>
-        <Label Content="{DynamicResource m_FollowUsLabel}" HorizontalAlignment="Left" Margin="44,383,0,0" VerticalAlignment="Top" FontWeight="Bold">
+        <Label x:Name="DeveloperMode_Label" Content="{DynamicResource m_DevMode}" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top" Background="{x:Null}" Foreground="#FFF30000" FontWeight="Bold"/>
+        <Label Content="{DynamicResource m_FollowUsLabel}" HorizontalAlignment="Left" Margin="32,396,0,0" VerticalAlignment="Top" FontWeight="Bold">
             <Label.Foreground>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="0"/>
@@ -127,7 +139,7 @@
         </Label>
 
         <!-- Social community buttons -->
-        <StackPanel HorizontalAlignment="Left" Height="30" Margin="10,409,0,0" VerticalAlignment="Top" Width="222" Orientation="Horizontal">
+        <StackPanel HorizontalAlignment="Left" Height="30" Margin="10,422,0,0" VerticalAlignment="Top" Width="222" Orientation="Horizontal">
             <Button 
                 x:Name="FacebookButton"
                 Style="{StaticResource ButtonBackgroundImageShow}"
@@ -248,7 +260,7 @@
             Style="{StaticResource ButtonBackgroundImageShow}"
             Content="" 
             HorizontalAlignment="Left" 
-            Margin="758,25,0,0" 
+            Margin="756,25,0,0" 
             VerticalAlignment="Top" 
             Width="32" 
             Height="32" 
@@ -269,8 +281,8 @@
                 <DropShadowEffect Color="#FF0E0E0E" RenderingBias="Quality"/>
             </Label.Effect>
         </Label>
-        <Label Content="{DynamicResource m_Author}" HorizontalAlignment="Left" Margin="616.426,488.706,0,0" VerticalAlignment="Top" Foreground="White" FontStyle="Italic"/>
-        <Grid HorizontalAlignment="Left" Height="51.96" Margin="237,383,0,0" VerticalAlignment="Top" Width="553">
+        <Label Content="{DynamicResource m_Author}" HorizontalAlignment="Left" Margin="636,497,0,0" VerticalAlignment="Top" Foreground="White" FontStyle="Italic"/>
+        <Grid HorizontalAlignment="Left" Height="52" Margin="238,400,0,0" VerticalAlignment="Top" Width="560">
             <TextBlock x:Name="statusText" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontStyle="Italic" Margin="0,8,0,0"/>
             <TextBlock x:Name="statusCountText" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontStyle="Italic" Margin="474,8,0,0" Height="16"/>
             <ProgressBar x:Name="ProgressBar1" x:FieldModifier="public" HorizontalAlignment="Left" Height="23" Margin="0,28.96,0,0" VerticalAlignment="Top" Width="553" ValueChanged="ProgressBar1_ValueChanged"/>
