--- a/EC_Launcher/App.xaml
+++ b/EC_Launcher/App.xaml
@@ -2,15 +2,16 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:EC_Launcher"
-             StartupUri="MainWindow.xaml" Startup="Application_Startup">
+             StartupUri="Views/MainWindow.xaml" 
+             Startup="Application_Startup">
     
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="resources/ButtonStyle.xaml"/>
-                <ResourceDictionary Source="resources/ButtonBackgroundImage.xaml"/>
-                <ResourceDictionary Source="resources/lang.xaml"/>
-                <ResourceDictionary Source="resources/LabelStyle.xaml"/>
+                <ResourceDictionary Source="Resources/ButtonStyle.xaml"/>
+                <ResourceDictionary Source="Resources/ButtonBackgroundImage.xaml"/>
+                <ResourceDictionary Source="Resources/Lang.xaml"/>
+                <ResourceDictionary Source="Resources/LabelStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>    
         </ResourceDictionary>
     </Application.Resources>
