--- a/EC_Launcher/Views/MainWindow.xaml
+++ b/EC_Launcher/Views/MainWindow.xaml
@@ -12,6 +12,9 @@
         Width="800"
         BorderBrush="#7F87CEEB"
         BorderThickness="1">
+    <Window.Background>
+        <ImageBrush ImageSource="/EC_Launcher;component/Resources/Background.bmp"/>
+    </Window.Background>
 
 
     <WindowChrome.WindowChrome>
@@ -20,7 +23,7 @@
 
     <Grid>
         <Grid.Background>
-            <ImageBrush ImageSource="Background.bmp"/>
+            <ImageBrush ImageSource="/EC_Launcher;component/Resources/Background.bmp"/>
         </Grid.Background>
 
         <Border Name="mask" CornerRadius="20" Width="560" BorderThickness="1"
@@ -155,7 +158,7 @@
                     </LinearGradientBrush>
                 </Button.BorderBrush>
                 <Button.Background>
-                    <ImageBrush ImageSource="icons/facebook-black.png"/>
+                    <ImageBrush ImageSource="/EC_Launcher;component/Icons/facebook-black.png"/>
                 </Button.Background>
             </Button>
             <Button 
@@ -171,7 +174,7 @@
                     </LinearGradientBrush>
                 </Button.BorderBrush>
                 <Button.Background>
-                    <ImageBrush ImageSource="icons/vk-black.png"/>
+                    <ImageBrush ImageSource="/EC_Launcher;component/Icons/vk-black.png"/>
                 </Button.Background>
             </Button>
             <Button 
@@ -187,7 +190,7 @@
                     </LinearGradientBrush>
                 </Button.BorderBrush>
                 <Button.Background>
-                    <ImageBrush ImageSource="icons/youtube-black.png"/>
+                    <ImageBrush ImageSource="/EC_Launcher;component/Icons/youtube-black.png"/>
                 </Button.Background>
             </Button>
             <Button 
@@ -204,7 +207,7 @@
                     </LinearGradientBrush>
                 </Button.BorderBrush>
                 <Button.Background>
-                    <ImageBrush ImageSource="icons/discord-black.png"/>
+                    <ImageBrush ImageSource="/EC_Launcher;component/Icons/discord-black.png"/>
                 </Button.Background>
             </Button>
             <Button 
@@ -220,7 +223,7 @@
                     </LinearGradientBrush>
                 </Button.BorderBrush>
                 <Button.Background>
-                    <ImageBrush ImageSource="icons/steam-black.png"/>
+                    <ImageBrush ImageSource="/EC_Launcher;component/Icons/steam-black.png"/>
                 </Button.Background>
             </Button>
             <Button 
@@ -235,7 +238,7 @@
                     </LinearGradientBrush>
                 </Button.BorderBrush>
                 <Button.Background>
-                    <ImageBrush ImageSource="icons/moddb-black.png"/>
+                    <ImageBrush ImageSource="/EC_Launcher;component/Icons/moddb-black.png"/>
                 </Button.Background>
             </Button>
         </StackPanel>
@@ -267,7 +270,7 @@
             BorderBrush="{x:Null}" 
             Click="CloseButton_Click">
             <Button.Background>
-                <ImageBrush ImageSource="icons/cancel_button.png"/>
+                <ImageBrush ImageSource="/EC_Launcher;component/icons/cancel_button.png"/>
             </Button.Background>
         </Button>
         <Label Content="Hearts of Iron IV: Economic Crisis Launcher" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="16" FontFamily="Perpetua Titling MT" Height="25" Width="440.913" Style="{DynamicResource LabelStyle}">
