--- a/EC_Launcher/Views/MainWindow.xaml
+++ b/EC_Launcher/Views/MainWindow.xaml
@@ -115,22 +115,8 @@
         </StackPanel>
         <TextBlock x:Name="PgBar_TextBlock" Visibility="Hidden" Text="{Binding ElementName=ProgressBar1, Path=Value, StringFormat={}{0:0}%}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="133,290,642,113" />
 
-        <Label x:Name="ModVersionLabel" Content="{DynamicResource m_ModVersionLabel}" HorizontalAlignment="Left" Margin="10,506,0,0" VerticalAlignment="Top" FontWeight="Bold" Background="{x:Null}" FontSize="9">
-            <Label.Foreground>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="Black" Offset="0"/>
-                    <GradientStop Color="#FFFDFDFF" Offset="1"/>
-                </LinearGradientBrush>
-            </Label.Foreground>
-        </Label>
-        <Label x:Name="LauncherVersionLabel" Content="{DynamicResource m_LauncherVersionLabel}" HorizontalAlignment="Left" Margin="10,493,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="9">
-            <Label.Foreground>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="Black" Offset="0"/>
-                    <GradientStop Color="White" Offset="1"/>
-                </LinearGradientBrush>
-            </Label.Foreground>
-        </Label>
+        <Label x:Name="ModVersionLabel" Content="{DynamicResource m_ModVersionLabel}" HorizontalAlignment="Left" Margin="10,506,0,0" VerticalAlignment="Top" FontWeight="Bold" Background="{x:Null}" FontSize="9" Foreground="White"/>
+        <Label x:Name="LauncherVersionLabel" Content="{DynamicResource m_LauncherVersionLabel}" HorizontalAlignment="Left" Margin="10,493,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="9" Foreground="#FFF7F7F7"/>
         <Label x:Name="DeveloperMode_Label" Content="{DynamicResource m_DevMode}" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top" Background="{x:Null}" Foreground="#FFF30000" FontWeight="Bold"/>
         <Label Content="{DynamicResource m_FollowUsLabel}" HorizontalAlignment="Left" Margin="32,396,0,0" VerticalAlignment="Top" FontWeight="Bold">
             <Label.Foreground>
@@ -284,7 +270,11 @@
                 <DropShadowEffect Color="#FF0E0E0E" RenderingBias="Quality"/>
             </Label.Effect>
         </Label>
-        <Label Content="{DynamicResource m_Author}" HorizontalAlignment="Left" Margin="636,497,0,0" VerticalAlignment="Top" Foreground="White" FontStyle="Italic"/>
+        <Label HorizontalAlignment="Left" Margin="636,497,0,0" VerticalAlignment="Top" Foreground="White" FontStyle="Italic" FontWeight="Bold">
+            <Hyperlink NavigateUri="https://www.facebook.com/suxrobgm" RequestNavigate="Hyperlink_RequestNavigate">
+                Developed by SuxrobGM
+            </Hyperlink>
+        </Label>
         <Grid HorizontalAlignment="Left" Height="52" Margin="238,400,0,0" VerticalAlignment="Top" Width="560">
             <TextBlock x:Name="statusText" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontStyle="Italic" Margin="0,8,0,0"/>
             <TextBlock x:Name="statusCountText" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontStyle="Italic" Margin="474,8,0,0" Height="16"/>
