--- a/EC_Launcher/Views/DonateWindow.xaml
+++ b/EC_Launcher/Views/DonateWindow.xaml
@@ -9,8 +9,9 @@
         Height="330" 
         Width="457" 
         Closing="Window_Closing" 
-        WindowStartupLocation="CenterOwner">
-    
+        WindowStartupLocation="CenterOwner" 
+        ResizeMode="NoResize">
+
     <Grid>
         <Grid.Background>
             <RadialGradientBrush>
@@ -18,6 +19,21 @@
                 <GradientStop Color="#FF212020" Offset="1"/>
             </RadialGradientBrush>
         </Grid.Background>
+        <TextBlock Text="{DynamicResource m_DonateDesc}" TextWrapping="Wrap" Foreground="White" TextDecorations="{x:Null}" FontWeight="Bold" Height="58" VerticalAlignment="Top" Margin="5,0"/>
+        <TextBlock HorizontalAlignment="Left" Margin="195,63,0,0" TextWrapping="Wrap" Text="{DynamicResource m_DonateWalletsLabel}" VerticalAlignment="Top" Foreground="White" FontWeight="Bold"/>
+        <WrapPanel HorizontalAlignment="Left" Height="185" Margin="10,84,0,0" VerticalAlignment="Top" Width="430">
+            <Image HorizontalAlignment="Left" Height="58" VerticalAlignment="Top" Width="184" Source="/EC_Launcher;component/Icons/webmoney_logo.png"/>
+            <StackPanel Height="50" Width="136" Margin="5,0,0,0">
+                <TextBox IsReadOnly="True" HorizontalAlignment="Left" TextWrapping="Wrap" Text="WMZ: Z161759845739" VerticalAlignment="Top" Foreground="White" FontWeight="Bold" Height="15" Background="{x:Null}" BorderBrush="{x:Null}"/>
+                <TextBox IsReadOnly="True" HorizontalAlignment="Left" TextWrapping="Wrap" Text="WMR: R829584988832" VerticalAlignment="Top" Foreground="White" FontWeight="Bold" Height="15" Background="{x:Null}" BorderBrush="{x:Null}"/>
+                <TextBox IsReadOnly="True" HorizontalAlignment="Left" TextWrapping="Wrap" Text="WMX: X250174717185" VerticalAlignment="Top" Foreground="White" FontWeight="Bold" Height="15" Background="{x:Null}" BorderBrush="{x:Null}"/>
+            </StackPanel>
+            <Image HorizontalAlignment="Left" Height="58" VerticalAlignment="Top" Width="184" Source="/EC_Launcher;component/Icons/qiwi_logo.png"/>
+            <TextBox IsReadOnly="True" HorizontalAlignment="Left" TextWrapping="Wrap" Text="+998979250729" VerticalAlignment="Top" Foreground="White" FontWeight="Bold" Height="18" Margin="0,20,0,0" Background="{x:Null}" BorderBrush="{x:Null}"/>
+            <Image HorizontalAlignment="Left" Height="58" VerticalAlignment="Top" Width="156" Source="/EC_Launcher;component/Icons/bitcoin_logo.png"/>
+            <TextBox IsReadOnly="True" HorizontalAlignment="Left" TextWrapping="Wrap" Text="1FjG9a7jzoW5SgLsAGZcxXAc82bpmyVWN6" VerticalAlignment="Top" Foreground="White" FontWeight="Bold" Height="18" Margin="0,20,0,0" Width="255" Background="{x:Null}" BorderBrush="{x:Null}"/>
+        </WrapPanel>
+
     </Grid>
-    
+
 </Window>
