--- a/EC_Launcher/resources/lang.xaml
+++ b/EC_Launcher/resources/lang.xaml
@@ -26,6 +26,10 @@
     <v:String x:Key="m_SendButton">Send</v:String>
 
     <!--Donate Window-->
+    <v:String x:Key="m_DonateDesc">
+        Donate for support future of project and server. Please include your name in the payment comment. Top donaters will be in the list of project supporters. Best regards, EC Dev Team
+    </v:String>
+    <v:String x:Key="m_DonateWalletsLabel">Our payment wallets:</v:String>
     
     <!--Message Box Texts-->
     <v:String x:Key="m_ERROR">ERROR</v:String>
