--- a/EC_Launcher/Resources/Lang.ru-RU.xaml
+++ b/EC_Launcher/Resources/Lang.ru-RU.xaml
@@ -28,7 +28,7 @@
 
     <!--Donate Window-->
     <v:String x:Key="m_DonateDesc">
-        Donate for support future of project and server. Please include your name in the payment comment. Top donaters will be in the list of project supporters. Best regards, EC Dev Team
+        Поддержите будущего проекта и состояние сервера. Пожалуйста, укажите ваше имя в комментарии к платежу. Лучшие спонсоры будут в списке топа. С наилучшими пожеланиями, EC Dev Team
     </v:String>
     <v:String x:Key="m_DonateWalletsLabel">Наши кошельки для оплаты:</v:String>
 
