added animation and fixed updating bugs

--- a/EC_Launcher/Views/MainWindow.xaml
+++ b/EC_Launcher/Views/MainWindow.xaml
@@ -103,14 +103,14 @@
         <!--Progressbar-->
         <Grid Margin="240,383,9.6,91.8">
             <TextBlock Text="{Binding ProgressData.StatusText}" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontStyle="Italic" Height="17"/>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Width="99" VerticalAlignment="Top" Height="17">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Width="80" VerticalAlignment="Top" Height="17">
                 <TextBlock Text="{Binding ProgressData.CurrentValue}" TextWrapping="Wrap" Foreground="White" FontStyle="Italic"/>
                 <TextBlock Text="{Binding ProgressData.MaxValue, StringFormat={}/{0:0}}" TextWrapping="Wrap" Foreground="White" FontStyle="Italic"/>
             </StackPanel>
             <ProgressBar Value="{Binding ProgressData.Percentage, Mode=OneWay}" Height="23" VerticalAlignment="Bottom"/>
             <TextBlock Text="{Binding ProgressData.Percentage, Mode=OneWay, StringFormat={}{0:0}%}" TextAlignment="Center" TextWrapping="Wrap" Width="46" Background="{x:Null}" FontWeight="Bold" FontStyle="Italic" Margin="249,22,247,0"/>
         </Grid>
-        <Frame prism:RegionManager.RegionName="ViewsRegion" Content="" Margin="240,27,9.6,137.8" NavigationUIVisibility="Hidden"/>
+        <Frame prism:RegionManager.RegionName="ViewsRegion" Content="" Margin="240,27,9.6,137.8" NavigationUIVisibility="Hidden" Navigating="Frame_Navigating"/>
 
         <Grid Margin="10,367,558.6,81.8" Width="225">
             <Label Content="{DynamicResource m_FollowUsLabel}" HorizontalAlignment="Left" Margin="68,1,0,0" VerticalAlignment="Top" FontWeight="Bold">
