--- a/EC_Launcher/Resources/Lang.ru-RU.xaml
+++ b/EC_Launcher/Resources/Lang.ru-RU.xaml
@@ -25,6 +25,8 @@
     <v:String x:Key="m_YourNameLabel">Ваше имя:</v:String>
     <v:String x:Key="m_WriteAboutBugLabel">Напишите об ошибке:</v:String>
     <v:String x:Key="m_SendButton">Отправить</v:String>
+    <v:String x:Key="m_AttachLogFile">Прикрепить файлы лога</v:String>
+    <v:String x:Key="m_AddScreenshots">Добавить скрины</v:String>
 
     <!--Donate Window-->
     <v:String x:Key="m_DonateDesc">
