--- a/EC_Launcher/Views/ReportBugPage.xaml
+++ b/EC_Launcher/Views/ReportBugPage.xaml
@@ -42,7 +42,7 @@
         <TextBox Text="{Binding SenderName}" HorizontalAlignment="Left" Height="23" Margin="10,59,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="303"/>
         <Label Content="{DynamicResource m_YourNameLabel}" HorizontalAlignment="Left" Margin="10,33,0,0" VerticalAlignment="Top" Width="120" FontWeight="Bold" Foreground="#FFFFFDFD" FontStyle="Italic"/>
         <Label Content="{DynamicResource m_WriteAboutBugLabel}" HorizontalAlignment="Left" Margin="10,99,0,0" VerticalAlignment="Top" Width="156" FontWeight="Bold" Foreground="#FFFFFDFD" FontStyle="Italic"/>
-        <CheckBox IsChecked="{Binding IsAttachedLogFile}" Content="Attach log files" HorizontalAlignment="Left" Margin="10,0,0,10.2" VerticalAlignment="Bottom" Foreground="White"/>
+        <CheckBox IsChecked="{Binding IsAttachedLogFile}" Content="{DynamicResource m_AttachLogFile}" HorizontalAlignment="Left" Margin="10,0,0,10.2" VerticalAlignment="Bottom" Foreground="White"/>
         <ListBox ItemsSource="{Binding ScreenshotFiles}" SelectedItem="{Binding SelectedScreenshotFile}" Margin="318,59,23,66.2" Background="{x:Null}" Foreground="White" FontStyle="Italic">
             <ListBox.ContextMenu>
                 <ContextMenu>
@@ -50,7 +50,7 @@
                 </ContextMenu>
             </ListBox.ContextMenu>
         </ListBox>
-        <Button Command="{Binding AddScreenshootsCommand}" Content="Add screenshots" Margin="318,0,23,36.2" VerticalAlignment="Bottom" FontWeight="Bold" Height="25"/>
+        <Button Command="{Binding AddScreenshootsCommand}" Content="{DynamicResource m_AddScreenshots}" Margin="318,0,23,36.2" VerticalAlignment="Bottom" FontWeight="Bold" Height="25"/>
         <Label Content="Drag and Drop image file" HorizontalAlignment="Left" Margin="347,144,0,0" VerticalAlignment="Top" Foreground="#FF575757"/>
     </Grid>
 </Page>
